<resources>
    <string name="app_name">LoginApp</string>
    <string name="Top_logindisp">Cloud OTP</string>
    <string name="Userhint">Email/Phone</string>
    <string name="EnterOTPHint">Enter OTP</string>
    <string name="Remember">Remember me</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="create">Registration</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Select a Country</string>
    <string name="submit">Submit</string>
    <string name="logout">logout</string>
    <string name="get_otp">Get OTP</string>
    <string name="replace">Hello</string>
    <string name="or">or</string>
    <string name="todo">TODO</string>

</resources>