<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"

        android:background="@drawable/ic_wave__3_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_how_to_reg_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/Top_logindisp"
        android:textColor="@color/light_back"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view2"
        tools:layout_editor_absoluteX="0dp">

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/Userhint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@drawable/cursor"
                android:autofillHints="">

            </EditText>

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/enter_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/EnterOTPHint"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@drawable/cursor"
                android:autofillHints="">

            </EditText>


        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/get_otp"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_otp"
            app:neumorph_shapeType="flat"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/purple_500">

        </soup.neumorphism.NeumorphButton>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/verify_otp"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:neumorph_shapeType="flat"
            android:text="@string/verify_otp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/light_back">

        </soup.neumorphism.NeumorphButton>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>