<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    tools:context=".Home">

    <View
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave__3_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/ic_baseline_tag_faces_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/usernam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="@color/light_back"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view2"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphTextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="25sp">

        </soup.neumorphism.NeumorphTextView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center">
            <Spinner
                android:id="@+id/spin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphTextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="25dp">

        </soup.neumorphism.NeumorphTextView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/logout"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            app:neumorph_shapeType="flat"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/purple_500"
            android:layout_marginTop="20dp">

        </soup.neumorphism.NeumorphButton>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>